Noch Weitere fix für einrückung und whitespacing

--- a/client/src/Components/SelectionView/SelectionView.css
+++ b/client/src/Components/SelectionView/SelectionView.css
@@ -57,7 +57,6 @@
 
 h2 {
     padding-bottom: 15px;
-    padding-top: 15px;
 }
 
 h1 {
